# dotm

./: Cargo.toml
src/: cli.rs  constants.rs  git.rs  hint.rs  main.rs
src/cmds/: init.rs  mod.rs  profile.rs
src/config/: mod.rs
